--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+9/8/2014
+- wrote Panda test under Lesson 2 FE Branch
+
 9/5/2014
 - Put Readme into a more formal format.
 - Started Conditonals & Control Flow
