--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,7 @@
 9/8/2014
-- wrote Panda test under Lesson 2 FE Branch
-- wrote Fahrenheit test under Lesson 2 FE Branch
+- comitted Panda test under Lesson 2 FE Branch
+- committed Fahrenheit test under Lesson 2 FE Branch
+- committed L2 PROBLEM 11 under Lesson 2 FE Branch
 
 9/5/2014
 - Put Readme into a more formal format.
