--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,7 @@
 - comitted Panda test under Lesson 2 FE Branch
 - committed Fahrenheit test under Lesson 2 FE Branch
 - committed L2 PROBLEM 11 under Lesson 2 FE Branch
+- committed L3 PROBLEM 2A under Lesson 3 FE Branch
 
 9/5/2014
 - Put Readme into a more formal format.
