--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
+9/9/2014
+- committed COUNTING VOWELS under Problem Set 1
+- committed COUNTING BOBS under Problem Set 1
+- committed ALPHABETICAL SUBSTRINGS under Problem Set 1
+
 9/8/2014
-- comitted Panda test under Lesson 2 FE Branch
+- committed Panda test under Lesson 2 FE Branch
 - committed Fahrenheit test under Lesson 2 FE Branch
 - committed L2 PROBLEM 11 under Lesson 2 FE Branch
 - committed L3 PROBLEM 2A under Lesson 3 FE Branch
