--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+9/10/2014
+- committed lecture notes codes to corresponding Lessons
+
 9/9/2014
 - committed COUNTING VOWELS under Problem Set 1
 - committed COUNTING BOBS under Problem Set 1
