--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 9/10/2014
 - committed lecture notes codes to corresponding Lessons
+- committed lectureCode_Lec2.5.4.py under Lesson 2 FE
+- committed lectureCode_Lec2.6.2.py under Lesson 2 FE
+- committed lectureCode_Lec2.6.4.py under Lesson 2 FE
+
 
 9/9/2014
 - committed COUNTING VOWELS under Problem Set 1
@@ -7,10 +11,10 @@
 - committed ALPHABETICAL SUBSTRINGS under Problem Set 1
 
 9/8/2014
-- committed Panda test under Lesson 2 FE Branch
-- committed Fahrenheit test under Lesson 2 FE Branch
-- committed L2 PROBLEM 11 under Lesson 2 FE Branch
-- committed L3 PROBLEM 2A under Lesson 3 FE Branch
+- committed Panda test under Lesson 2 FE
+- committed Fahrenheit test under Lesson 2 FE
+- committed L2 PROBLEM 11 under Lesson 2 FE
+- committed L3 PROBLEM 2A under Lesson 3 FE
 
 9/5/2014
 - Put Readme into a more formal format.
