--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+9/11/2014
+- committed PAYING THE MINIMUM under Problem Set 2
+
 9/10/2014
 - committed lecture notes codes to corresponding Lessons
 - committed lectureCode_Lec2.5.4.py under Lesson 2 FE
