--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,6 @@
 9/11/2014
 - committed PAYING THE MINIMUM under Problem Set 2
+- committed PAYING THE MINIMUM (All Variables Defined) under Problem Set 2
 
 9/10/2014
 - committed lecture notes codes to corresponding Lessons
