--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,7 @@
 - committed PAYING THE MINIMUM under Problem Set 2
 - committed PAYING THE MINIMUM (All Variables Defined) under Problem Set 2
 - committed PAYING DEBT OFF IN A YEAR under Problem Set 2
+- committed USING BISECTION SEARCH TO MAKE THE PROGRAM FASTER under Problem Set 2
 
 9/10/2014
 - committed lecture notes codes to corresponding Lessons
