--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,6 @@
 9/12/2014
 - committed 3 of 15 under Conditionals & Control Flow
+- committed 4 of 15 under Conditionals & Control Flow
 
 9/11/2014
 - committed PAYING THE MINIMUM under Problem Set 2
