--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,7 @@
 9/12/2014
 - committed 3 of 15 under Conditionals & Control Flow
 - committed 4 of 15 under Conditionals & Control Flow
+- renamed 2, 3, 4 of 15 to Comparators Part 1, 2, 3
 
 9/11/2014
 - committed PAYING THE MINIMUM under Problem Set 2
