--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+9/14/2014
+- committed Boolean Operators Part 1 under Conditionals & Control Flow
+
 9/12/2014
 - committed 3 of 15 under Conditionals & Control Flow
 - committed 4 of 15 under Conditionals & Control Flow
