--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+9/15/2014
+- committed Boolean Operators Part 2 under Conditionals & Control Flow
+
 9/14/2014
 - committed Boolean Operators Part 1 under Conditionals & Control Flow
 
