--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,7 @@
 - committed Boolean Operators Part 2 under Conditionals & Control Flow
 - committed Boolean Operators Part 3 under Conditionals & Control Flow
 - committed Boolean Operators Part 4 under Conditionals & Control Flow
+- committed Boolean Operators Part 5 under Conditionals & Control Flow
 
 9/14/2014
 - committed Boolean Operators Part 1 under Conditionals & Control Flow
