--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+9/16/2014
+- committed Documentation under master
+
 9/15/2014
 - committed Boolean Operators Part 2 under Conditionals & Control Flow
 - committed Boolean Operators Part 3 under Conditionals & Control Flow
