--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,7 @@
 9/16/2014
 - committed Documentation under master
 - committed If, Else and Elif Part 1 under Conditionals & Control Flow
+- committed If, Else and Elif Part 2 under Conditionals & Control Flow
 
 9/15/2014
 - committed Boolean Operators Part 2 under Conditionals & Control Flow
