--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,7 @@
 9/17/2014
 - committed If, Else and Elif Part 2 under Conditionals & Control Flow
 - committed If, Else and Elif Part 3 under Conditionals & Control Flow
+- committed If, Else and Elif Part 4 under Conditionals & Control Flow
 
 9/16/2014
 - committed Documentation under master
