--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,7 @@
 - committed If, Else and Elif Part 2 under Conditionals & Control Flow
 - committed If, Else and Elif Part 3 under Conditionals & Control Flow
 - committed If, Else and Elif Part 4 under Conditionals & Control Flow
+- committed Review under Conditionals & Control Flow
 
 9/16/2014
 - committed Documentation under master
