--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+9/18/2014
+- committed Radiation Exposure under Lesson 3 FE
+
 9/17/2014
 - committed If, Else and Elif Part 2 under Conditionals & Control Flow
 - committed If, Else and Elif Part 3 under Conditionals & Control Flow
