--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,6 @@
 9/18/2014
 - committed Radiation Exposure under Lesson 3 FE
+- moved Radiation Exposure to Problem Set 3
 
 9/17/2014
 - committed If, Else and Elif Part 2 under Conditionals & Control Flow
