--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,7 @@
 9/18/2014
 - committed Radiation Exposure under Lesson 3 FE
 - moved Radiation Exposure to Problem Set 3
+- committed PygLatin Part 1 under PygLatin
 
 9/17/2014
 - committed If, Else and Elif Part 2 under Conditionals & Control Flow
