--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,6 @@
 9/19/2014
 - committed PygLatin Part 1 under PygLatin
+- refactored PygLatin Part 1 under PygLatin
 
 9/18/2014
 - committed Radiation Exposure under Lesson 3 FE
