--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+9/20/2014
+- committed Tip Calculator under Functions
+
 9/19/2014
 - committed PygLatin Part 1 under PygLatin
 - refactored PygLatin Part 1 under PygLatin
