--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,6 @@
 9/21/2014
 - committed Function Syntax Part 1 under Functions
+- committed Function Syntax Part 2 under Functions
 
 9/20/2014
 - committed Tip Calculator under Functions
