--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,7 @@
 - committed Function Syntax Part 2 under Functions
 - committed Function Syntax Part 3 under Functions
 - committed Function Syntax Part 4 under Functions
+- committed Function Sytnax Part 5 under Functions
 
 9/20/2014
 - committed Tip Calculator under Functions
